Start plumbing the CLI
